<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="login_app_name">高旅纵横</string>
    <string name="public_app_name">高旅纵横</string>
    <string name="tab_home_msg">首页</string>
    <string name="tab_found_msg">失物招领</string>
    <string name="tab_mine_msg">我的</string>
    <string name="message_permission_rationale">你需要授予以下权限以继续该程序:\n\n%1$s</string>
    <string name="message_permission_sms">你需要授予以下短信读取权限</string>
    <string name="message_permissions">你需要在设置界面开启客户端权限:\n\n%1$s</string>
    <string name="permission_name_calendar">日历</string>
    <string name="permission_name_camera">相机</string>
    <string name="permission_name_contacts">通讯录</string>
    <string name="permission_name_location">位置信息</string>
    <string name="permission_name_microphone">麦克风</string>
    <string name="permission_name_phone">电话</string>
    <string name="permission_name_sensors">身体传感器</string>
    <string name="permission_name_sms">短信</string>
    <string name="permission_name_storage">存储空间</string>
    <string name="tab_main_home">首页</string>
    <string name="tab_main_found">失物招领</string>
    <string name="tab_main_mine">我的</string>
    <string name="image_view_description">description</string>
    <string name="successful_report_baggage">行李挂失成功</string>
    <string name="successful_report_baggage_message">系统正在帮您查找，反馈最晚不超过72小时\n如有疑问，请联系：kf@gaolvgo.com</string>
    <string name="i_know">我知道了</string>
    <string name="view_luggage">查看行李</string>
    <string name="keep_adding">继续添加</string>
    <string name="add_luggage_msg">丢失行李时，通过已提交的行李信息高效寻找行李</string>
    <string name="your_message">您的个人信息</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_phone">请输入联系方式</string>
    <string name="input_id">请输入有效身份证号</string>
    <string name="baggage_info">您的行李信息</string>
    <string name="baggage_name">例如：拉杆箱</string>
    <string name="submit">提交</string>
    <string name="login_et_hint">请输入手机号码</string>
    <string name="login_btn_code">获取验证码</string>
    <string name="login_des">我已阅读并同意</string>
    <string name="tv_start_h5">《高旅纵横用户服务协议》</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_main_ticket">我的车票</string>
    <string name="item_main_address">地址管理</string>
    <string name="item_main_coupon">优惠券</string>
    <string name="item_mine_money_bag">我的钱包</string>
    <string name="item_main_goods">我的商品</string>
    <string name="item_main_lost">我的失物</string>
    <string name="item_main_customer">联系客服</string>
    <string name="item_main_question">意见反馈</string>
    <string name="cp_search_hint_text">请输入城市中文名或拼音</string>
    <string name="cp_cancel">取消</string>
    <string name="cp_no_result">没有找到，换个词试试~</string>
    <string name="cp_locate_failed">定位失败</string>
    <string name="cp_locating">正在定位…</string>
    <string name="str_money">￥</string>
    <string name="child_desc">儿童购票说明： \n 1、儿童身高低于1.2米，不需要购票，可免费乘车； 儿童身高1.2米-1.5米，可买儿童票，享受优惠价； 儿童身高大于1.5米，需以全价购买成人票。\n 2、若使用儿童本人证件购买儿童票，请使用儿童本人证件取票进站；若使用同行成人证件购买儿童票，请使用同行成人证件取票进站；\n 3、请根据儿童实际身高购票，以免影响乘车；\n 4、免费儿童无单独座位，须与成人共用一个座位，如需单独座位，请购买儿童票。\n</string>
    <string name="student_desc">学生票购票说明： \n1.乘车时间为每年6月1日 - 9月30日及12月1日 - 3月31日（疫情期间寒假延长至5月31日），其他时间需购买成人票 \n2.学生优惠每年限用4次，超出4次或乘车区段不在优惠区间将无法取票 \n3.仅支持购买硬座/硬卧/二等座/无座，其他坐席需购买成人票 \n4.取票时应携带本人学生证 \n5.目前仅支持大学生购买线上学生票\n</string>
    <string name="bottom_name_desc">网络购票需验证乘客身份信息，乘客证件及姓名都通过验证才能取票成功</string>
    <string name="bottom_name">1、使用身份证、回乡证、台胞证预定火车票请优先使用中文姓名；\n2、使用护照购票，若护照上有中文名时，请输入中文名；\n3、若姓名中有包含生僻字，可直接输入拼音代替，例如：“张偄”可用“张ruan”代替；\n4、若姓名中有“？”“.”时，请仔细辨析身份证原件上的字符，准确输入；\n5、台湾护照、台湾身份证暂不支持购买火车票；\n6、台籍乘客请使用台胞证（台湾居民来往大陆通行证）。</string>
    <string name="error_over_count">最多只能选择 %1$d 张图片</string>
    <string name="found_delete_not_resume">删除后信息无法恢复</string>
    <string name="found_submit_info">提交信息</string>
    <string name="found_edit_lost_info">编辑失物信息</string>
    <string name="found_submit_lost_info">提交失物信息</string>
    <string name="found_lost_train_number">丢失车次</string>
    <string name="found_input_train_number">请输入车次</string>
    <string name="found_define_delete_lost_info">您确定要删除失物信息么？</string>
    <string name="found_lost_train">丢失车站</string>
    <string name="found_input_train">请输入车站</string>
    <string name="found_choose">请选择</string>
    <string name="found_complete_edit_info">为精准找到失物，请完整填写失物信息</string>
    <string name="found_lost_find_no_delete">您的失物已经找到，删除后无法找回</string>
    <string name="found_lost_no_find_dialog_title">很抱歉,系统未匹配到您的失物</string>
    <string name="found_lost_no_find_dialog_msg">高旅建议您下次出行选择电子行李卡业务来保障您的行李</string>
    <string name="found_lost_payed_posting">您已支付费用，正在安排邮寄</string>
    <string name="found_lost_start_post">您的行李已经开始邮寄了</string>
    <string name="found_query_post_price">查询快递费</string>
    <string name="found_choose_accompanying">请选择快递公司</string>
    <string name="found_add_address_info">请先补充地址信息</string>
    <string name="found_lost">丢失</string>
    <string name="found_remake">备注</string>
    <string name="found_lost_name">失物名称</string>
    <string name="found_maybe_lost_place">可能丢失地点</string>
    <string name="found_lost_type">失物类别</string>
    <string name="found_edit">编辑</string>
    <string name="found_finding_un_bg_top">请耐心等待，系统会72小时内持续帮</string>
    <string name="found_finding_un_bg_bottom">您找寻失物！</string>
    <string name="found_perfect_address_pay_post">请您尽快完善地址信息并支付快递费</string>
    <string name="found_use">用！</string>
    <string name="found_post_lost_cost">支付-元</string>
    <string name="found_lost_unfind_info_top">很抱歉，系统未帮您找到失物，建议</string>
    <string name="found_lost_unfind_info_bottom">您下次出行选择电子行李卡提升保障！</string>
    <string name="found_lost_fail">失物信息已失效！</string>
    <string name="found_apply_resume">您的申请被退回！</string>
    <string name="found_click_hide">点击收起</string>
    <string name="found_click_show_more">点击查看更多物流详情</string>
    <string name="found_net_slow">网络较慢,请稍后再试</string>
    <string name="fragment_add_passenger">新增乘客</string>
    <string name="fragment_choose_city_area">选择国家或地区</string>
    <string name="fragment_china">中国</string>
    <string name="fragment_edit_passenger">编辑乘客</string>
    <string name="fragment_input_correct_phone">请输入正确的手机号码</string>
    <string name="fragment_choose_code_type">请选择证件类型</string>
    <string name="fragment_input_code_id">请输入证件号码</string>
    <string name="fragment_choose_country">请选择国籍</string>
    <string name="fragment_choose_sex">请选择性别</string>
    <string name="fragment_choose_birthday">请选择出生日期</string>
    <string name="fragmnet_choose_date">请选择有效日期</string>
    <string name="fragment_ticket_change_confim">改签确认</string>
    <string name="fragment_retreat_info">改退说明</string>
    <string name="guide_lost_find">失物找回</string>
    <string name="guide_lost_info_msg">智能检索遗失物品 一键认领邮寄到家</string>
    <string name="guide_fast_buy_ticket">极速抢/购票</string>
    <string name="guide_fast_buy_ticket_msg">出票快准省 旅程更舒心</string>
    <string name="guide_carefully_store">高旅严选商城</string>
    <string name="guide_carefully_store_msg">甄选品牌好物 追求极致生活</string>
    <string name="guide_last_msg">全新上线 为你而来 立即体验</string>
    <string name="kind_desc_info">投保须知</string>
    <string name="login_read_agree_pact">请阅读并同意以下协议</string>
    <string name="login_agree_pact_message">为保障您的个人信息安全，登录前需要您阅读并同意《高旅纵横用户服务协议》。</string>
    <string name="login_no_agree">不同意</string>
    <string name="login_agree">同意</string>
    <string name="login_re_get">重新获取</string>
    <string name="login_and">与</string>
    <string name="login_privacy_pacy">《隐私协议》</string>
    <string name="my_home_new_comer_gift">新人礼</string>
    <string name="order_fail_status_back">返回订单详情</string>
    <string name="passenger_choose">选择乘客</string>
    <string name="passenger_choose_no_exceed_five">最多可选择五名乘客</string>
    <string name="passenger_choose_first">请选择乘客</string>
    <string name="private_pact">隐私协议</string>
    <string name="user_pact_title">高旅纵横用户服务协议</string>
    <string name="refund_detail_title">退款详情</string>
    <string name="refund_detail_success">退款成功</string>
    <string name="refund_detail_thank_use">感谢您使用高旅纵横</string>
    <string name="refund_detail_confirm">退款确认</string>
    <string name="refund_detail_confirm_info">【高旅纵横处理】您的退款已提交到第三方进行处理，请耐心等待结果</string>
    <string name="refund_detail_confirm_success">【高旅纵横处理】您有一笔退款预计将在5个工作日内按原路退回您的付款账户，请注意查收！如有疑问请联系客服。</string>
    <string name="refund_detail_fail">退款失败</string>
    <string name="refund_detail_doing">退款办理中</string>
    <string name="refund_detail_doing_wait">正在为您办理退款，请耐心等待…</string>
    <string name="refund_detail_agent_agree">【审核通过】正在为您退款</string>
    <string name="refund_detail_review">退款审核</string>
    <string name="refund_detail_reviewing">您的退款正在审核中，请耐心等待结果</string>
    <string name="refund_detail_submit_success">提交成功</string>
    <string name="splash_sure">确定</string>
    <string name="ticket_time_table_docked">停靠车站</string>
    <string name="ticket_time_table_being_late">正晚点</string>
    <string name="ticket_time_table_to_now">到本站</string>
    <string name="ticket_time_table_go">出发</string>
    <string name="ticket_time_table_stop">停留</string>
    <string name="lost_archive_title_message">发车到行程结束30天内的行程可以登记遗失物品找回。</string>
    <string name="create_lost_info_res_what">您遗失的物品是什么？</string>
    <string name="et_lost_info_name_hint">例如：黑色双肩背包</string>
    <string name="lost_res_type_label">物品类型</string>
    <string name="found_please_choose">请选择</string>
    <string name="found_lost_time_area_label">遗失的时间与位置？</string>
    <string name="found_lost_time_label">丢失时间</string>
    <string name="found_lost_area_label">遗失场所</string>
    <string name="found_lost_maybe_area_label">可能丢失的地点（限三项）</string>
    <string name="star_symbol">*</string>
    <string name="found_use_remake_msg">以上如果不足以描述事物，您可以进行补充说明</string>
    <string name="found_tip_label">小贴士：请您尽量描述失物特点，例如：红色半透明手机壳</string>
    <string name="found_your_name_what">您的姓名？</string>
    <string name="found_input_real_name">请输入真实姓名</string>
    <string name="found_confirm_register">确认登记</string>
    <string name="found_pay_x">支付xx元</string>
    <string name="found_add_new_address">新增收货地址</string>
    <string name="found_create_new_address">你还没有收获地址，赶紧去创建吧</string>
    <string name="found_courier_company">快递公司</string>
    <string name="found_postal_code_label">快递编号</string>
    <string name="found_shipping_address">收货地址</string>
    <string name="found_lost_info">失物信息</string>
    <string name="add_passenger_address_top_msg">温馨提示：自即日起，乘客须提供本人手机号进行购票，除未成年人、老人等无手机旅客可提供监护人或者亲友手机外，其他乘客务必提供本人手机，不可与他人共用同一号码，否则可能导致出票失败。</string>
    <string name="add_passenger_type_label">乘客类型</string>
    <string name="add_passenger_adult_ticket">成人票</string>
    <string name="add_passenger_student_ticket">学生票</string>
    <string name="add_passenger_child_ticket">儿童票</string>
    <string name="add_passenger_code_same">与乘客证件姓名保持一致</string>
    <string name="add_passenger_sex">性别</string>
    <string name="add_passenger_sex_man">男</string>
    <string name="add_passenger_sex_women">女</string>
    <string name="add_passenger_code_type">证件类型</string>
    <string name="add_passenger_code_two">二代身份证</string>
    <string name="add_passenger_code_number">证件号码</string>
    <string name="add_passenger_no_child_code">没有儿童证件？</string>
    <string name="add_passenger_input_real_code_num">请填写正确的证件号码</string>
    <string name="add_passenger_nationality">国籍（国家/地区）</string>
    <string name="add_passenger_birthday">出生日期</string>
    <string name="add_passenger_valid_period">有效期至</string>
    <string name="add_passenger_phone_num">手机号码</string>
    <string name="add_passenger_no_self_no_ticket">非乘客本人手机无法出票</string>
    <string name="change_information_time_table">时刻表</string>
    <string name="dialog_think_again">再想想</string>
    <string name="luggage_confirm_delete">您确定要删除这张行李卡吗？</string>
    <string name="luggage_delete_info_msg">删除后行李卡会失效，无法保护您的行李</string>
    <string name="dialog_confirm_delete">确定删除</string>
</resources>